# spurv

./: CMakeLists.txt  Makefile  README.md  TODO.md  constant_registry.cpp  constant_registry.hpp  constant_registry_impl.hpp  declarations.hpp  expressions.hpp  expressions_impl.hpp  nodes.hpp  nodes_impl.hpp  shader.hpp  shaders.hpp  shaders_impl.hpp  spurv.hpp  test.cpp  test2.cpp  texture_test.cpp  types.cpp  types.hpp  types_impl.hpp  uniform.cpp  uniform.hpp  uniforms.cpp  uniforms.hpp  uniforms_impl.hpp  utils.cpp  utils.hpp  utils_impl.hpp  values_impl.hpp
examples/: Makefile  compile_commands.json  test  test.cpp  test2.cpp  texture_test.cpp
examples/.cache/clangd/index/: test2.cpp.D04F6B536DE690E7.idx
include/: spurv.hpp
src/: constant_registry.cpp  constant_registry.hpp  constant_registry_impl.hpp  control_flow.cpp  control_flow.hpp  control_flow_impl.hpp  declarations.hpp  event_registry.cpp  event_registry.hpp  event_registry_impl.hpp  expressions_impl.hpp  pointers.cpp  pointers.hpp  pointers_impl.hpp  shaders.hpp  shaders_impl.hpp  types.cpp  types.hpp  types_impl.hpp  uniforms.cpp  uniforms.hpp  uniforms_impl.hpp  utils.cpp  utils.hpp  utils_impl.hpp  value_wrapper.hpp  value_wrapper_impl.hpp  values.hpp  values_impl.hpp  variable_registry.cpp  variable_registry.hpp  variable_registry_impl.hpp
